NetRexx 4.02 GA [December 20th, 2021]

- new special word asknoecho to request console input without echo
- Pipeline additions, improvements
- fix for arguments on command stage
- DIGEST stage (SHA1, SHA256, SHA512, MD2, MD5 and more).
- a small CMS-comptibility improvement for stage LITERAL
- documentation additions and corrections

NetRexx 4.01 GA [March 20th, 2021]

- the first NetRexx release compatible with the JDK >=9 module system, thanks to Marc Remes
- contains all 3.11 GA functionality
- design goal is to be able to compile all existing NetRexx code
- the NetRexx interpreter also has been modified and tested
- finds all Java classes in the module system under JDK >=9
- retains compatibility with - and runs under - JDK8
- a new Eclipse java compiler is included, patched for NetRexx
- Between stage: bug fix for numeric second argument
- adds the ADDRESS [environment] statement compatible with Classic Rexx
- adds the DATE and TIME functions compatible with Classic Rexx
- a pipeline from a .njp file can now be run with the pipe runner
- a pipeline (including portrait mode specifications) can be executed from a .nrx file with ADDRESS PIPE

When testing this new release with current JDK levels, please take into account
that a number of earlier deprecated classes indeed have been removed in later JDK releases.
The translator not being able to find a class, specially in the javax packages, is not necessarily
a bug in NetRexx. For example, starting with JDK 11, the whole of JEE has been removed. Every module
that could be included, has been included with NetRexx 4.01 .


NetRexx 3.11 GA [December 23rd, 2020]

- 3.10 is skipped as a release number, to avoid confusion with 3.01
- Diskr and diskw stages:enhanced detection of Windows-type path strings
- diskr and diskw stages fixed for relative filepaths
- COLLATE stage; with tests and documentation
- cons stage: add PRefix & PRompt keywords
- added USER to sqlselect.properties for some dbms