@@ -294,6 +294,12 @@
       </fileset>
     </unzip>    
 
+    <unzip dest="${build.classes}">
+      <fileset dir="lib">
+	<include name="ant-netrexx.jar"/>
+      </fileset>
+    </unzip>    
+
     <jar jarfile="${build.lib}/NetRexxC.jar" compress="yes" filesonly="true" manifest="${sources}/manifest">
       <fileset dir="${build.classes}">
         <include name="${runtimeDir}/*.class"/>
@@ -305,6 +311,7 @@
 	<include name="${nrwsDir}/*.class"/>
 	<include name="${jlineDir}/"/>
         <include name="${oldAPI}/*.class"/>
+	<include name="${anttaskDir}/*.class"/>
         <include name="${compilerDir}/*.properties"/>
       </fileset>
       <fileset dir="${root}">
@@ -345,7 +352,13 @@
 	<include name="jansi*.jar"/>
       </fileset>
     </unzip>    
-    
+
+    <unzip dest="${build.classes}">
+      <fileset dir="lib">
+	<include name="ant-netrexx.jar"/>
+      </fileset>
+    </unzip>    
+
     <jar jarfile="${build.lib}/NetRexxF.jar" compress="yes" filesonly="true" manifest="${sources}/manifest">
       <fileset dir="${build.classes}">
         <include name="${runtimeDir}/*.class"/>
@@ -359,6 +372,7 @@
         <include name="${eclipseDir}/"/>
 	<include name="${jlineDir}/"/>
 	<include name="${nrwsDir}/*.class"/>
+	<include name="${anttaskDir}/*.class"/>
         <include name="META-INF/"/>
         <include name="about.html"/>
       </fileset>
