@@ -1,5 +1,6 @@
-NetRexx 4.02 GA [December 20th, 2021]
+NetRexx 4.02 GA [December 31, 2021]
 
+- NetRexxC.jar and NetRexxF.jar now contain the ANT task for NetRexx
 - new special word asknoecho to request console input without echo
 - Pipeline additions, improvements
 - fix for arguments on command stage
